@@ -370,9 +370,9 @@ const char *roomtype_string[MAXROOMTYPES] =
 
 const char *catchall_string[MAXROOMTYPES] =
 {
-    "Generic Catchall","Special Item","Info Type","Amount"," ","Repair Fee"," "," "," ","Shop Type",
-    "Shop Type","Price","Price"," ","Warp Ring"," "," ", " ", " ",
-    " ", "Price","Shop Type"
+    "Generic Catchall","Special Item","Info Type","Amount","Generic Catchall","Repair Fee","Generic Catchall","Generic Catchall","Generic Catchall","Shop Type",
+    "Shop Type","Price","Price","Generic Catchall","Warp Ring","Generic Catchall","Generic Catchall", "Generic Catchall", "Generic Catchall",
+    "Generic Catchall", "Price","Shop Type"
 };
 
 const char *warptype_string[MAXWARPTYPES] =
